# fakeLib

./: CMakeLists.txt  file1.hpp  lib.hpp
src/: file1.cpp  lib.cpp
